default/objects/Loan_Update__e/Loan_Update__e.object-meta.xml
<CustomObject>
    <label>Loan Update</label>
    <pluralLabel>Loan Updates</pluralLabel>
</CustomObject>