default/objects/Loan_Update__e/fields/Elli_Environment__c.field-meta.xml
<CustomField>
    <fullName>Elli_Environment__c</fullName>
    <description>A field to hold the Elli-Environment value from the request header</description>
    <label>Elli-Environment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>