default/objects/Loan_Update__e/fields/Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Event_Id__c</fullName>
    <description>The field to hold the event Id from the Body</description>
    <label>Event Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>