default/objects/Loan_Update__e/fields/Event_Time__c.field-meta.xml
<CustomField>
    <fullName>Event_Time__c</fullName>
    <description>A field to hold the event time value from the body</description>
    <label>Event Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>