default/objects/Loan_Update__e/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>A field to hole the event Type from the Body</description>
    <label>Event Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>