default/objects/Loan_Update__e/fields/Resource_Id__c.field-meta.xml
<CustomField>
    <fullName>Resource_Id__c</fullName>
    <description>A field to hold the meta-&gt; resource id from the body</description>
    <label>Resource Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>