default/objects/Loan_Update__e/fields/Resource_Reference__c.field-meta.xml
<CustomField>
    <fullName>Resource_Reference__c</fullName>
    <description>A field to hold the meta-&gt;resource ref from the body</description>
    <label>Resource Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>