default/objects/Loan_Update__e/fields/Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>Resource_Type__c</fullName>
    <description>A field to hold the meta-&gt;Resource Type from the Body</description>
    <label>Resource Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>